[gd_scene load_steps=21 format=2]

[ext_resource path="res://map/TileSets/Loveable.tres" type="TileSet" id=1]
[ext_resource path="res://art/black_tile.tres" type="TileSet" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://art/loveable_rogue.png" type="Texture" id=4]
[ext_resource path="res://RectHighlight.gd" type="Script" id=5]
[ext_resource path="res://DebugGui.gd" type="Script" id=6]
[ext_resource path="res://NodeTree.gd" type="Script" id=7]
[ext_resource path="res://RectrRoomHighlighter.gd" type="Script" id=8]
[ext_resource path="res://Hider.gd" type="Script" id=9]
[ext_resource path="res://GameWorld.gd" type="Script" id=10]
[ext_resource path="res://map/LoveableBasic.gd" type="Script" id=13]
[ext_resource path="res://art/slap.wav" type="AudioStream" id=15]
[ext_resource path="res://art/FF_punch.wav" type="AudioStream" id=16]
[ext_resource path="res://art/blunk.wav" type="AudioStream" id=17]
[ext_resource path="res://art/hit2.wav" type="AudioStream" id=18]
[ext_resource path="res://FXManager.gd" type="Script" id=19]
[ext_resource path="res://GameUI.gd" type="Script" id=20]

[sub_resource type="Theme" id=3]

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;
uniform sampler2D viewport1;

void fragment() {
    COLOR = vec4(UV.x, UV.y, 0.5, 1.0);
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )

[node name="Game" type="Node2D"]
script = ExtResource( 3 )
random_seed = -4554876820186044928
use_seed = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 1152, 608 )
current = true
limit_left = 0
limit_top = 0
limit_right = 1280
limit_bottom = 928
drag_margin_h_enabled = true
drag_margin_v_enabled = true

[node name="DebugGui" type="CanvasLayer" parent="."]
script = ExtResource( 6 )

[node name="Hider" type="Node2D" parent="DebugGui"]
visible = false
script = ExtResource( 9 )

[node name="LeafHighlight" type="ColorRect" parent="DebugGui/Hider"]
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0.423529, 0.988235, 0.109804, 0.364706 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RectHighlight" type="ColorRect" parent="DebugGui/Hider"]
margin_left = -395.107
margin_top = 437.76
margin_right = -355.107
margin_bottom = 477.76
color = Color( 0.968627, 0.0431373, 0.0431373, 0.443137 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RectrRoomHighlighter" type="ColorRect" parent="DebugGui/Hider"]
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0.0823529, 0.00392157, 1, 0.596078 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NodeLayer" type="CanvasLayer" parent="DebugGui/Hider"]

[node name="NodeTree" type="Tree" parent="DebugGui/Hider/NodeLayer"]
visible = false
modulate = Color( 1, 1, 1, 0.666667 )
margin_top = 24.6942
margin_right = 292.0
margin_bottom = 613.694
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HideTree" type="Button" parent="DebugGui/Hider/NodeLayer"]
margin_right = 12.0
margin_bottom = 20.0
text = "Toggle Tree"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextLeaf" type="Button" parent="DebugGui/Hider"]
margin_left = 1241.69
margin_top = 675.59
margin_right = 1261.69
margin_bottom = 695.59
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighlightLeaf" type="Button" parent="DebugGui/Hider"]
margin_left = 1132.13
margin_top = 675.47
margin_right = 1231.13
margin_bottom = 695.47
text = "Highlight Leaf"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PreviousLeaf" type="Button" parent="DebugGui/Hider"]
margin_left = 1103.0
margin_top = 675.0
margin_right = 1120.0
margin_bottom = 695.0
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterMark" type="Sprite" parent="DebugGui/Hider"]
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 128, 208, 16, 16 )

[node name="Seed" type="Label" parent="DebugGui/Hider"]
margin_left = 93.3395
margin_top = 4.20448
margin_right = 133.34
margin_bottom = 18.2045
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameWorld" type="Node2D" parent="."]
script = ExtResource( 10 )

[node name="WorldView" type="Viewport" parent="GameWorld"]

[node name="WorldTiles" type="TileMap" parent="GameWorld/WorldView"]
format = 1

[node name="LevelObjects" type="Node2D" parent="GameWorld/WorldView"]

[node name="LevelActors" type="Node2D" parent="GameWorld/WorldView"]

[node name="ShadowWorldView" type="Viewport" parent="GameWorld"]

[node name="ShadowWorldTiles" type="TileMap" parent="GameWorld/ShadowWorldView"]
format = 1

[node name="FOWGhosts" type="Node2D" parent="GameWorld/ShadowWorldView"]

[node name="LoveableBasic" type="TileMap" parent="GameWorld"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
script = ExtResource( 13 )
tile_type_map = [ 1, 0, 2, 4, 3, 4, 5 ]

[node name="LevelObjects" type="Node2D" parent="GameWorld"]

[node name="LevelActors" type="Node2D" parent="GameWorld"]

[node name="FOWGhosts" type="Node2D" parent="GameWorld"]

[node name="FogOfWar" type="TileMap" parent="GameWorld"]
modulate = Color( 1, 1, 1, 0.678431 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="Unexplored" type="TileMap" parent="GameWorld"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="ColorRect" type="ColorRect" parent="GameWorld"]
margin_left = -1120.0
margin_top = -544.0
margin_right = 1312.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="GameWorld"]
margin_left = -864.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileHighlight" type="ColorRect" parent="GameWorld"]
margin_left = -32.0
margin_top = -16.0
margin_right = -16.0
color = Color( 0.427451, 1, 0.290196, 0.490196 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileHighlight2" type="ColorRect" parent="GameWorld"]
margin_left = -32.0
margin_top = -16.0
margin_right = -16.0
color = Color( 0.290196, 0.615686, 1, 0.490196 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FXManager" type="Node2D" parent="."]
script = ExtResource( 19 )

[node name="GameUI" type="Node2D" parent="."]
script = ExtResource( 20 )

[node name="Line2D" type="Line2D" parent="GameUI"]
width = 4.0

[node name="AreaHighlight" type="Node2D" parent="GameUI"]

[node name="CanvasLayer" type="CanvasLayer" parent="GameUI"]

[node name="ColorRect" type="ColorRect" parent="GameUI/CanvasLayer"]
visible = false
margin_right = 256.0
margin_bottom = 512.0
color = Color( 0.121569, 0.0941176, 0.0941176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="GameUI/CanvasLayer"]
margin_left = 528.0
margin_top = 512.0
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.0823529, 0.0823529, 0.0980392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GameUI/CanvasLayer"]
margin_left = 544.0
margin_top = 528.0
margin_right = 1280.0
margin_bottom = 704.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="GameUI/CanvasLayer/VBoxContainer"]
margin_right = 736.0
margin_bottom = 158.0
grow_horizontal = 0
grow_vertical = 0
size_flags_vertical = 3
theme = SubResource( 3 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LogBox" type="RichTextLabel" parent="GameUI/CanvasLayer/VBoxContainer/ScrollContainer"]
margin_right = 736.0
margin_bottom = 158.0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
scroll_following = true

[node name="MessageBox" type="Label" parent="GameUI/CanvasLayer/VBoxContainer"]
margin_top = 162.0
margin_right = 736.0
margin_bottom = 176.0

[node name="ColorRect3" type="ColorRect" parent="GameUI/CanvasLayer"]
material = SubResource( 5 )
margin_top = 512.0
margin_right = 208.0
margin_bottom = 720.0
color = Color( 0.121569, 0.121569, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tweens" type="Node" parent="."]

[node name="Tween" type="Tween" parent="Tweens"]

[node name="SFX" type="Node2D" parent="."]

[node name="Footsteps" type="AudioStreamPlayer2D" parent="SFX"]
pause_mode = 1
stream = ExtResource( 15 )
volume_db = -5.871

[node name="Switch" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 17 )

[node name="BarsOpen" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 16 )

[node name="Door" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 18 )

[connection signal="world_ready" from="GameWorld" to="." method="_on_world_ready"]
